--- a/e-commerce/app/globals.css
+++ b/e-commerce/app/globals.css
@@ -2,96 +2,145 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --primary-color: #3490dc;
+    /* Blue */
+    --secondary-color: #ffed4a;
+    /* Yellow */
+    --danger-color: #e3342f;
+    /* Red */
+    --background-color: #f7fafc;
+    /* Light Gray */
+    --text-color: #2d3748;
+    /* Dark Gray */
+  }
+
+  body {
+    @apply text-slate-600;
+    background-color: var(--background-color);
+    color: var(--text-color);
+  }
+
+  a {
+    color: var(--primary-color);
+    @apply hover:text-blue-700 transition-colors duration-300;
+  }
+
+  .btn-primary {
+    @apply px-4 py-2 text-white rounded-lg cursor-pointer transition-colors duration-300 flex gap-2;
+    background-color: var(--primary-color);
+  }
+
+  .btn-primary:hover {
+    background-color: #2779bd;
+    /* Darker shade of primary color */
+  }
+
+  .btn-primary:active {
+    background-color: #1c3d5a;
+    /* Even darker shade of primary color */
+  }
+
+  .btn-secondary {
+    @apply px-4 py-2 bg-slate-300 text-black rounded-lg cursor-pointer transition-colors duration-300 flex gap-2;
+  
+  }
+
+  .btn-secondary:hover {
+   @apply bg-slate-400;
+    /* Darker shade of secondary color */
+  }
+
+  .btn-secondary:active {
+    @apply bg-slate-500;
+    /* Even darker shade of secondary color */
+  }
+
+  .btn-danger {
+    @apply px-4 py-2 text-white rounded-lg cursor-pointer transition-colors duration-300 flex gap-2;
+    background-color: var(--danger-color);
+  }
+
+  .btn-danger:hover {
+    background-color: #cc1c1c;
+    /* Darker shade of danger color */
+  }
+
+  .btn-danger:active {
+    background-color: #991111;
+    /* Even darker shade of danger color */
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
 
-* {
-  @apply text-slate-600;
-}
+  input,
+  textarea,
+  select {
+    @apply p-2 bg-slate-100 rounded-lg border border-gray-300 focus:outline-none focus:ring-2;
+    border-color: var(--primary-color);
+  }
 
-.btn-danger {
-  @apply px-4 py-2 bg-red-500 text-white rounded-lg cursor-pointer hover:bg-red-700 active:bg-red-900 transition-colors duration-300 flex gap-2;
-}
+  li {
+    @apply list-decimal;
+  }
 
-.btn-secondary {
-  @apply px-4 py-2 bg-slate-100 text-slate-600 rounded-lg cursor-pointer hover:bg-slate-200 active:bg-slate-300 transition-colors duration-300 flex gap-2;
+  select {
+    @apply appearance-none;
+  }
 
-}
+  h1 {
+    @apply text-3xl font-bold;
+    color: var(--primary-color);
+  }
 
-.btn {
-  @apply px-4 py-2 bg-blue-500 text-white rounded-lg cursor-pointer hover:bg-blue-700 active:bg-blue-900 transition-colors duration-300 flex gap-2;
-}
+  h2 {
+    @apply text-2xl font-bold;
+  }
 
-a {
-  @apply p-2 rounded-lg cursor-pointer hover:bg-slate-100 transition-colors duration-300;
-}
+  h3 {
+    @apply text-xl font-bold;
+  }
 
-input,
-textarea,
-select {
-  @apply p-2 bg-slate-100 rounded-lg;
-}
+  h4 {
+    @apply text-lg font-bold;
+  }
 
-li {
-  @apply list-decimal;
-}
+  h5 {
+    @apply text-base font-bold;
+  }
 
-select {
-  @apply appearance-none;
-}
+  h6 {
+    @apply text-sm font-bold;
+  }
 
-h1 {
-  @apply text-3xl font-bold;
-}
+  .progress-ring__circle {
+    transition: stroke-dashoffset 0.5s;
+    transform: rotate(-90deg);
+    transform-origin: 50% 50%;
+  }
 
-h2 {
-  @apply text-2xl font-bold;
-}
+  /* width */
+  ::-webkit-scrollbar {
+    @apply w-3;
+  }
 
-h3 {
-  @apply text-xl font-bold;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    @apply bg-slate-300 rounded-md;
+  }
 
-h4 {
-  @apply text-lg font-bold;
-}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    @apply bg-slate-400 rounded-md;
+  }
 
-h5 {
-  @apply text-base font-bold;
-}
-
-h6 {
-  @apply text-sm font-bold;
-}
-
-.progress-ring__circle {
-  transition: stroke-dashoffset 0.5s;
-  transform: rotate(-90deg);
-  transform-origin: 50% 50%;
-}
-
-/* width */
-::-webkit-scrollbar {
-  @apply w-3;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  @apply bg-slate-300;
-  @apply rounded-md;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  @apply bg-slate-400;
-
-  @apply rounded-md;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  @apply hover:bg-slate-500
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-slate-500;
+  }
 }
